--- a/.github/workflows/crDroid.yml
+++ b/.github/workflows/crDroid.yml
@@ -1,4 +1,4 @@
-name: crDroid Release
+name: Release
 
 on:
   workflow_dispatch:
@@ -472,29 +472,6 @@ jobs:
           df -h | tee -a error-log-${{ matrix.device }}.txt
           echo "" >> error-log-${{ matrix.device }}.txt
 
-      - name: Generate SELinux headers
-        working-directory: kernel
-        env:
-          MAKE_ARGS:
-            O=out LLVM=1 LLVM_IAS=1 ARCH=arm64
-            CROSS_COMPILE=aarch64-linux-gnu-
-            CROSS_COMPILE_ARM32=arm-linux-gnueabi-
-        run: |
-          echo "--- Generating SELinux Headers ---" | tee -a ../error-log-${{ matrix.device }}.txt
-          export PATH=$GITHUB_WORKSPACE/clang/bin:$PATH
-          echo "Preparing kernel build and generating headers..." | tee -a ../error-log-${{ matrix.device }}.txt
-          if make ${{ env.MAKE_ARGS }} ${{ matrix.device }}_defconfig 2>&1 | tee -a ../error-log-${{ matrix.device }}.txt; then
-            echo "✓ Defconfig applied" | tee -a ../error-log-${{ matrix.device }}.txt
-          fi
-          if make ${{ env.MAKE_ARGS }} prepare 2>&1 | tee -a ../error-log-${{ matrix.device }}.txt; then
-            echo "✓ Kernel prepare completed" | tee -a ../error-log-${{ matrix.device }}.txt
-          fi
-          echo "Building SELinux subsystem to generate flask.h..." | tee -a ../error-log-${{ matrix.device }}.txt
-          if make ${{ env.MAKE_ARGS }} security/selinux/ 2>&1 | tee -a ../error-log-${{ matrix.device }}.txt; then
-            echo "✓ SELinux headers generated" | tee -a ../error-log-${{ matrix.device }}.txt
-          fi
-          echo "" >> ../error-log-${{ matrix.device }}.txt
-          
       - name: Build kernel
         working-directory: kernel
         env:
@@ -739,14 +716,14 @@ jobs:
           fi
 
           # Create release name
-          RELEASE_NAME="pdx234 & pdx237 Kernel: SukiSU & SUSFS ${SUSFS_VERSION}"
+          RELEASE_NAME="crDroid: SukiSU & SUSFS ${SUSFS_VERSION}"
           echo "RELEASE_NAME<<EOF" >> $GITHUB_ENV
           echo "$RELEASE_NAME" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
           # Create release notes
           cat > release-notes.md << EOF
-          This release includes **SukiSU** for Sony Xperia devices on crDroid 12.6
+          This release includes **SukiSU** for Sony Xperia devices on LineageOS 23.2
 
           ## Supported Devices:
           - **pdx234** - Sony Xperia 1 V
@@ -767,7 +744,7 @@ jobs:
           <summary>▸ Notes:</summary>
 
           - Device specific builds for Sony Xperia with SM8550
-          - Based on crDroid 12.6 kernel source (Android 13 base)
+          - Based on LineageOS 23.0 kernel source (Android 13 base)
           - In the latest version of susfs, flashing AK3 with Kernel Flasher may brick your device, try [Horizon Kernel Flasher](https://github.com/libxzr/HorizonKernelFlasher)
           - Flash the AnyKernel3 zip that matches your device model
 
@@ -792,8 +769,8 @@ jobs:
           - **SukiSU Branch**: builtin
           - **Devices**: Sony Xperia 1 V (pdx234), Sony Xperia 5 V (pdx237)
           - **Base Kernel**: 5.15
-          - **Android Version**: 13 (crDroid 12.6)
-          - **crDroid Base**: 12.6
+          - **Android Version**: 13 (LineageOS 23.2)
+          - **LineageOS Base**: 23.2
           - **Clang Version**: ${{ env.AOSP_CLANG_VERSION }}
           - **Release Version**: ${{ github.event.inputs.release_version }}
           - **Build Date**: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
