--- a/.github/workflows/crDroid.yml
+++ b/.github/workflows/crDroid.yml
@@ -1,4 +1,4 @@
-name: Release
+name: crDroid Release
 
 on:
   workflow_dispatch:
@@ -47,7 +47,7 @@ jobs:
     timeout-minutes: 120
     strategy:
       matrix:
-        device: [pdx234, pdx237]
+        device: [pdx234]
       fail-fast: false
     steps:
       - name: Maximize Build Space
@@ -255,7 +255,7 @@ jobs:
           fi
 
           echo "Enabling Baseband-guard kernel configuration..." | tee -a "$LOG"
-          CONFIG_FILE="arch/arm64/configs/${{ matrix.device }}_defconfig"
+          CONFIG_FILE="arch/arm64/configs/crdroidpdx234defconfig"
 
           # Add CONFIG_BBG=y if not already present
           if grep -q '^CONFIG_BBG=y' "$CONFIG_FILE"; then
@@ -356,7 +356,7 @@ jobs:
         run: |
           echo "--- Kernel Configuration ---" | tee -a ../error-log-${{ matrix.device }}.txt
 
-          DEFCONFIG="arch/arm64/configs/${{ matrix.device }}_defconfig"
+          DEFCONFIG="arch/arm64/configs/crdroidpdx234defconfig"
           echo "Using defconfig: $DEFCONFIG" | tee -a ../error-log-${{ matrix.device }}.txt
 
           echo "CONFIG_KSU=y" >> "$DEFCONFIG"
@@ -490,7 +490,7 @@ jobs:
           echo "Building with $(nproc --all) parallel jobs..." | tee -a ../error-log-${{ matrix.device }}.txt
           echo "Build started: $(date -u)" | tee -a ../error-log-${{ matrix.device }}.txt
 
-          if make ${{ env.MAKE_ARGS }} ${{ matrix.device }}_defconfig all 2>&1 | tee build.log; then
+          if make ${{ env.MAKE_ARGS }} crdroidpdx234defconfig all 2>&1 | tee build.log; then
             echo "✓ Kernel build completed successfully" | tee -a ../error-log-${{ matrix.device }}.txt
           else
             echo "✗ ERROR: Kernel build failed!" | tee -a ../error-log-${{ matrix.device }}.txt
@@ -655,12 +655,6 @@ jobs:
           name: kernel-pdx234-sukisu-${{ github.event.inputs.sukisu_branch == 'Stable(标准)' && 'stable' || 'dev' }}
           path: artifacts/pdx234
 
-      - name: Download build artifacts for pdx237
-        uses: actions/download-artifact@v4
-        with:
-          name: kernel-pdx237-sukisu-${{ github.event.inputs.sukisu_branch == 'Stable(标准)' && 'stable' || 'dev' }}
-          path: artifacts/pdx237
-
       - name: Prepare release assets
         run: |
           mkdir -p release-assets
@@ -669,11 +663,6 @@ jobs:
           cp artifacts/pdx234/Image-pdx234 release-assets/Image-pdx234
           cp artifacts/pdx234/build-info-pdx234.txt release-assets/build-info-pdx234.txt
           cp artifacts/pdx234/AnyKernel3-pdx234-sukisu-*.zip release-assets/
-
-          # Copy pdx237 files
-          cp artifacts/pdx237/Image-pdx237 release-assets/Image-pdx237
-          cp artifacts/pdx237/build-info-pdx237.txt release-assets/build-info-pdx237.txt
-          cp artifacts/pdx237/AnyKernel3-pdx237-sukisu-*.zip release-assets/
 
           # Auto-fetch latest APK based on branch
           if [ "${{ github.event.inputs.sukisu_branch }}" == "Dev(开发)" ]; then
@@ -716,18 +705,17 @@ jobs:
           fi
 
           # Create release name
-          RELEASE_NAME="pdx234 & pdx237 Kernel: SukiSU & SUSFS ${SUSFS_VERSION}"
+          RELEASE_NAME="pdx234 crDroid Kernel: SukiSU & SUSFS ${SUSFS_VERSION}"
           echo "RELEASE_NAME<<EOF" >> $GITHUB_ENV
           echo "$RELEASE_NAME" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
           # Create release notes
           cat > release-notes.md << EOF
-          This release includes **SukiSU** for Sony Xperia devices on crDroid 12.6
+          This release includes **SukiSU** for Sony Xperia 1 V on crDroid 12.6
 
           ## Supported Devices:
           - **pdx234** - Sony Xperia 1 V
-          - **pdx237** - Sony Xperia 5 V
 
           Features:
           -> SukiSU-${{ github.event.inputs.sukisu_branch }} (builtin)
@@ -743,16 +731,14 @@ jobs:
           <details>
           <summary>▸ Notes:</summary>
 
-          - Device specific builds for Sony Xperia with SM8550
-          - Based on crDroid 12.6 kernel source (Android 13 base)
+          - Device specific build for Sony Xperia 1 V (SM8550)
+          - Based on crDroid 12.6 kernel source (Android 16)
           - In the latest version of susfs, flashing AK3 with Kernel Flasher may brick your device, try [Horizon Kernel Flasher](https://github.com/libxzr/HorizonKernelFlasher)
-          - Flash the AnyKernel3 zip that matches your device model
 
           </details>
 
-          ## Downloads:
+          ## Download:
           - **pdx234 (Xperia 1 V)**: AnyKernel3-pdx234-sukisu-*.zip
-          - **pdx237 (Xperia 5 V)**: AnyKernel3-pdx237-sukisu-*.zip
 
           Modules:
           -> https://github.com/sidex15/ksu_module_susfs
@@ -767,7 +753,7 @@ jobs:
 
           Build compiled with:
           - **SukiSU Branch**: builtin
-          - **Devices**: Sony Xperia 1 V (pdx234), Sony Xperia 5 V (pdx237)
+          - **Device**: Sony Xperia 1 V (pdx234)
           - **Base Kernel**: 5.15
           - **Android Version**: 13 (crDroid 12.6)
           - **crDroid Base**: 12.6
@@ -803,4 +789,4 @@ jobs:
           echo "Release created successfully!"
           echo "URL: https://github.com/${{ github.repository }}/releases/tag/${{ env.RELEASE_TAG }}"
           echo "Release type: ${{ github.event.inputs.sukisu_branch == 'Dev(开发)' && 'Pre-release' || 'Latest release' }}"
-          echo "Devices included: pdx234 (Xperia 1 V), pdx237 (Xperia 5 V)"
+          echo "Device: pdx234 (Xperia 1 V)"
